syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc.chat";
option java_outer_classname = "ChatProto";

package chat;

service ChatService {
    rpc SendMessage (ChatMessage) returns (MessageResponse) {}
    rpc JoinChat (UserInfo) returns (stream ChatMessage) {}
}

message ChatMessage {
    string username = 1;
    string message = 2;
    int64 timestamp = 3;
    string message_id = 4;
}

message MessageResponse {
    bool success = 1;
    string error = 2;
}

message UserInfo {
    string username = 1;
}